force-app/main/default/objects/Online_Application_Audit__e/Online_Application_Audit__e.object-meta.xml
<CustomObject>
    <description>The online application audit platform event will be used to log errors or exceptions encountered during the application, providing an audit trail without interrupting the process flow.</description>
    <label>Online Application Audit</label>
    <pluralLabel>Online Application Audits</pluralLabel>
</CustomObject>