force-app/main/default/objects/Online_Application_Audit__e/fields/Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Stage__c</fullName>
    <description>Application stage refers to the online application stage that the Platform Event was created from.</description>
    <label>Application Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>