force-app/main/default/objects/Online_Application_Audit__e/fields/Audit_Text__c.field-meta.xml
<CustomField>
    <fullName>Audit_Text__c</fullName>
    <description>Audit text is a long text field used to pass rich logging information as a JSON payload to subscriber triggers, in a way that is flexible for many use cases.</description>
    <label>Audit Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>