force-app/main/default/objects/Online_Application_Audit__e/fields/Primary_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object_ID__c</fullName>
    <description>Primary object ID is a text field to provide the salesforce object context of the process that created the Platform Event.</description>
    <label>Primary Object ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>